Great progress!! -- First version of new layout for body content is almost completely in place      - RH sidebars working correctly (as long as they don't overlap)      - Overall placement working correctly - About to tackle switching the top "Overview" section from an old-school <table> structure to a CSS-based layout

--- a/themes/essayist/entry.css
+++ b/themes/essayist/entry.css
@@ -121,10 +121,10 @@
 .entry-content h3 {
     font-size:17px;
     font-style:italic;
-    padding: 28px 0 0;
+    padding: 28px 0 5px;
     text-align: right;
     line-height: normal;
-    margin-bottom: 8px;
+    margin-bottom: 3px;
     width: 460px;
     clear: left;
 }
