--- a/themes/essayist/summary.css
+++ b/themes/essayist/summary.css
@@ -86,6 +86,7 @@ body .summary {
     margin-top: 1em;
     font-style: italic;
     line-height: 1.75;
-    font-family: Cambria,'Times New Roman',serif;
+/*    font-family: Cambria,'Times New Roman',serif;
+    font-size: 14px;*/
 }
 
